; ModuleID = '/home/carl/AnghaBench/kphp-kdb/net/extr_net-udp.c_free_udp_message.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/net/extr_net-udp.c_free_udp_message.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.udp_message = type { i8*, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @free_udp_message(%struct.udp_message* %0) #0 {
  %2 = alloca %struct.udp_message*, align 8
  %3 = alloca i32, align 4
  store %struct.udp_message* %0, %struct.udp_message** %2, align 8
  %4 = load %struct.udp_message*, %struct.udp_message** %2, align 8
  %5 = getelementptr inbounds %struct.udp_message, %struct.udp_message* %4, i32 0, i32 1
  %6 = call i32 @rwm_free(i32* %5)
  store i32 %6, i32* %3, align 4
  %7 = load %struct.udp_message*, %struct.udp_message** %2, align 8
  %8 = getelementptr inbounds %struct.udp_message, %struct.udp_message* %7, i32 0, i32 0
  store i8* inttoptr (i64 -1 to i8*), i8** %8, align 8
  %9 = load %struct.udp_message*, %struct.udp_message** %2, align 8
  %10 = call i32 @free(%struct.udp_message* %9)
  %11 = load i32, i32* %3, align 4
  ret i32 %11
}

declare dso_local i32 @rwm_free(i32*) #1

declare dso_local i32 @free(%struct.udp_message*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
